src/objects/CBL_WetMill__c.object
<CustomObject>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_WetMills</relationshipLabel>
        <relationshipName>CBL_WetMills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CBL2_Farm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CBL2_Farm</label>
        <referenceTo>CBL2_Farm__c</referenceTo>
        <relationshipLabel>CBL_WetMill_CBL2_Farm</relationshipLabel>
        <relationshipName>CBL_WetMill_CBL2_Farm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desp_Granos_enteros_y_limpios__c</fullName>
        <formula>IF(INCLUDES(pulpingMachinesStatus__c , &quot;Granos enteros y limpios&quot;), &quot;Sí&quot;, &quot;No&quot;)</formula>
        <label>Desp - Granos enteros y limpios</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desp_Mal_estado_tira_grano_en_la_pulpa__c</fullName>
        <formula>IF(INCLUDES(pulpingMachinesStatus__c , &quot;Mal estado tira grano en la pulpa&quot;), &quot;Sí&quot;, &quot;No&quot;)</formula>
        <label>Desp - Mal estado tira grano en la pulpa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desp_Mal_estado_tira_pulpa_con_el_gran__c</fullName>
        <formula>IF(INCLUDES(pulpingMachinesStatus__c , &quot;Mal estado tira pulpa con el grano&quot;), &quot;Sí&quot;, &quot;No&quot;)</formula>
        <label>Desp - Mal estado tira pulpa con el gran</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desp_granos_quebrados_o_mordidos__c</fullName>
        <formula>IF(INCLUDES(pulpingMachinesStatus__c , &quot;Mal estado, granos quebrados o mordidos&quot;), &quot;Sí&quot;, &quot;No&quot;)</formula>
        <label>Desp - granos quebrados o mordidos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farm</label>
        <referenceTo>CBL_Farm__c</referenceTo>
        <relationshipLabel>CBL_WetMill_CBL_Farm</relationshipLabel>
        <relationshipName>CBL_WetMill_CBL_Farm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latitude_wetmill__c</fullName>
        <formula>Submission__r.gfsurveys__gps_y__c</formula>
        <label>Latitude_wetmill</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_wetmill__c</fullName>
        <formula>Submission__r.gfsurveys__gps_x__c</formula>
        <label>Longitude_wetmill</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL_WetMills</relationshipLabel>
        <relationshipName>CBL_WetMills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wetmill_code_guat__c</fullName>
        <label>Wetmill code guat</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>baseUsedForStorage__c</fullName>
        <label>baseUsedForStorage</label>
        <picklist>
            <picklistValues>
                <fullName>Sobre madera o estibas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directamente sobre el piso</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>canSeparateByLot__c</fullName>
        <label>canSeparateByLot</label>
        <picklist>
            <picklistValues>
                <fullName>Puede separar lotes/calidades/certif.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No puede separar lotes/calidades/certif.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>checksTransport__c</fullName>
        <label>checksTransport</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>classifiesInputCoffeeQuality__c</fullName>
        <label>classifiesInputCoffeeQuality</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cleanWaterRestingTime__c</fullName>
        <label>cleanWaterRestingTime</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cleanWaterResting__c</fullName>
        <label>cleanWaterResting</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cleanWaterUsed__c</fullName>
        <label>cleanWaterUsed</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeWashMeans__c</fullName>
        <label>coffeWashMeans</label>
        <picklist>
            <picklistValues>
                <fullName>Canal de correteo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilas de lavado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toneles metálicos o plásticos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desmucilaginadora</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>coffeeHarvestedMore6Hours__c</fullName>
        <label>coffeeHarvestedMore6Hours</label>
        <picklist>
            <picklistValues>
                <fullName>No, nunca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si, algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si, con mucha frecuencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se tiene ese control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>contaminationRisk__c</fullName>
        <label>contaminationRisk</label>
        <picklist>
            <picklistValues>
                <fullName>No hay riesgos de contaminación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si hay riesgos de contaminación</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>documentationAndLabeling__c</fullName>
        <label>documentationAndLabeling</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>drainageInfraStatus__c</fullName>
        <label>drainageInfraStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Buen drenaje sin charcos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal drenaje con charcos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>drainageStatus__c</fullName>
        <label>drainageStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Buen drenaje sin charcos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal drenaje con charcos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dryIsolatedContamination__c</fullName>
        <label>dryIsolatedContamination</label>
        <picklist>
            <picklistValues>
                <fullName>Humo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drenajes/aguas negras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caminos/carreteras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aplicaciones de agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>dryMeans__c</fullName>
        <label>dryMeans</label>
        <picklist>
            <picklistValues>
                <fullName>Secadora mecánica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patio de cemento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secador solar/marquesina/invernadero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parihuela/cama africana o de madera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lámina de zinc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plástico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>dryOver50Grades__c</fullName>
        <label>dryOver50Grades</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dryingStatus__c</fullName>
        <label>dryingStatus</label>
        <picklist>
            <picklistValues>
                <fullName>El café se seca parejo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El café seca disparejo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>enoughWater__c</fullName>
        <label>enoughWater</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, hay suficiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, no hay suficiente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fermTanksStatusBeforeProcess__c</fullName>
        <label>fermTanksStatusBeforeProcess</label>
        <picklist>
            <picklistValues>
                <fullName>Limpios antes de cada proceso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sucios con cierta frecuencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fermentationProcess__c</fullName>
        <label>fermentationProcess</label>
        <picklist>
            <picklistValues>
                <fullName>En pila de concreto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En acero inoxidable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En cajón de madera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En recipientes de plástico/metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En Sacos o bolsas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con Desmucilaginadora</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fermentationTanksStatus__c</fullName>
        <label>fermentationTanksStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Sin ranuras o grietas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con ranuras o grietas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fermentationTime__c</fullName>
        <label>fermentationTime</label>
        <picklist>
            <picklistValues>
                <fullName>Más de 15 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menos de 10 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junta partidas de diferente día</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fruitRecepBinStatusBeforeProc__c</fullName>
        <label>fruitRecepBinStatusBeforeProc</label>
        <picklist>
            <picklistValues>
                <fullName>Limpia antes de cada proceso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sucia con cierta frecuencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fruitReceptionBinStatus__c</fullName>
        <label>fruitReceptionBinStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Sin ranuras o grietas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con ranuras o grietas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hasPestControl__c</fullName>
        <label>hasPestControl</label>
        <picklist>
            <picklistValues>
                <fullName>Adecuado control de plagas y roedodres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No adecuado control de plagas y roedores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hasWarehouseOnlyForCoffee__c</fullName>
        <label>hasWarehouseOnlyForCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howClassifies__c</fullName>
        <label>howClassifies</label>
        <picklist>
            <picklistValues>
                <fullName>Vienen clasificados de campo (cosecha)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clasifica manualmente antes de procesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usa sifón con agua</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>humidityRisk__c</fullName>
        <label>humidityRisk</label>
        <picklist>
            <picklistValues>
                <fullName>No presenta riesgos de humedad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si presenta riesgos de humedad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>immediateDry__c</fullName>
        <label>immediateDry</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isTheWetMillReadyOrCertified__c</fullName>
        <label>isTheWetMillReadyOrCertified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lastWashWaterRecycled__c</fullName>
        <label>lastWashWaterRecycled</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>majorNonCompliance__c</fullName>
        <label>majorNonCompliance</label>
        <picklist>
            <picklistValues>
                <fullName>Contaminación de fuentes de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de contaminación del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de mezcla de café cert y no cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de mezcla de diferentes calidades</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ownsWetMill__c</fullName>
        <label>ownsWetMill</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>patioAndMecanicDryerStatus__c</fullName>
        <label>patioAndMecanicDryerStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Sin granos de secados anteriores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con granos de secados anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>processedCoffeeCertifications__c</fullName>
        <label>processedCoffeeCertifications</label>
        <picklist>
            <picklistValues>
                <fullName>Comercio Justo (FLO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico UE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico JAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico NOP-USDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.A.F.E practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amigable con aves/SBF (Bird friendly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café de Mujer/Café femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPP/Small Producers/Pequeño Productor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convencional/sin certificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sin certificación</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>processedCoffeeOrigin__c</fullName>
        <label>processedCoffeeOrigin</label>
        <picklist>
            <picklistValues>
                <fullName>Café producido en fincas propias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café comprado a otros productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vende el servicio de beneficiado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>processesWithDocumentation__c</fullName>
        <label>processesWithDocumentation</label>
        <picklist>
            <picklistValues>
                <fullName>Durante la cosecha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durante transporte a beneficio húmedo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En el ingreso a beneficio húmedo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En el procesamiento de beneficio húmedo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durante el secado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durante el almacenamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durante el transporte para entrega</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>protectsTransport__c</fullName>
        <label>protectsTransport</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pulpManagement__c</fullName>
        <label>pulpManagement</label>
        <picklist>
            <picklistValues>
                <fullName>La escurre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La protege de la lluvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procesa en compost en cuanto es posible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vende sin procesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La amontona sin protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vierte al río</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La bota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pulpingMachineWashedBeforeUse__c</fullName>
        <label>pulpingMachineWashedBeforeUse</label>
        <picklist>
            <picklistValues>
                <fullName>Se limpia antes de cada proceso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hay un dia específico para su limpieza</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pulpingMachinesStatus__c</fullName>
        <label>pulpingMachinesStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Mal estado, granos quebrados o mordidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal estado tira pulpa con el grano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal estado tira grano en la pulpa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos enteros y limpios</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>residualWaterDisposal__c</fullName>
        <label>residualWaterDisposal</label>
        <picklist>
            <picklistValues>
                <fullName>Las vierte en fuente de agua sin tratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las vierte en pozos de infiltración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escurrimiento superficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planta de tratamiento de aguas mieles</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>residualWaterDistOver40__c</fullName>
        <label>residualWaterDistOver40</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>riskOfContamWResidualWater__c</fullName>
        <label>riskOfContamWResidualWater</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>salesPurchasesDocumentation__c</fullName>
        <label>salesPurchasesDocumentation</label>
        <picklist>
            <picklistValues>
                <fullName>Sí documentadas ventas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No documentadas ventas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si documentadas compras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No documentadas compras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No compra café</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>separatedGrainsProcessedAppart__c</fullName>
        <label>separatedGrainsProcessedAppart</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>separationNetUsedToClasify__c</fullName>
        <label>separationNetUsedToClasify</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>storageCleanlinessStatus__c</fullName>
        <label>storageCleanlinessStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Buenas condiciones de limpieza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malas condiciones de limpieza</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>traceabilitySystem__c</fullName>
        <label>traceabilitySystem</label>
        <picklist>
            <picklistValues>
                <fullName>Tiene documentos de registro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programación de procesos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiene rotulos en bodega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiene sacos identificados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiene etiquetas de identificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hay riesgo de mezcla</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>transportWithChemicals__c</fullName>
        <label>transportWithChemicals</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>Línea Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>warehouseOtherUses__c</fullName>
        <label>warehouseOtherUses</label>
        <picklist>
            <picklistValues>
                <fullName>Es usada para agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Es usada para combutibles/otros quimicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Es usada para abonos orgánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Es usada para otras alimentos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Es un dormitorio/cocina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros usos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>washInfraStatusBeforeProc__c</fullName>
        <label>washInfraStatusBeforeProc</label>
        <picklist>
            <picklistValues>
                <fullName>Limpios antes de cada proceso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sucios con cierta frecuencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>washInfrastructureStatus__c</fullName>
        <label>washInfrastructureStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Sin ranuras o grietas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con ranuras o grietas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>washWaterSource__c</fullName>
        <label>washWaterSource</label>
        <picklist>
            <picklistValues>
                <fullName>Rio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nacimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pozo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agua de lluvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio público/comunitario</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>waterSeparation__c</fullName>
        <label>waterSeparation</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>